--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/mysql": "^2.15.19",
         "body-parser": "^1.19.0",
-        "express": "^4.17.1"
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "mysql": "^2.18.1"
     },
     "devDependencies": {
         "@types/body-parser": "^1.19.1",
