--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/morgan": "^1.9.3",
         "@types/mysql": "^2.15.19",
+        "@types/swagger-jsdoc": "^6.0.1",
+        "@types/swagger-ui-express": "^4.1.3",
         "body-parser": "^1.19.0",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "mysql": "^2.18.1"
+        "morgan": "^1.10.0",
+        "mysql": "^2.18.1",
+        "swagger-jsdoc": "^6.1.0",
+        "swagger-ui-express": "^4.1.6"
     },
     "devDependencies": {
         "@types/body-parser": "^1.19.1",
