--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/express-rate-limit": "^5.1.3",
         "@types/morgan": "^1.9.3",
         "@types/mysql": "^2.15.19",
         "@types/swagger-jsdoc": "^6.0.1",
@@ -17,6 +18,7 @@
         "body-parser": "^1.19.0",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "express-rate-limit": "^5.3.0",
         "morgan": "^1.10.0",
         "mysql": "^2.18.1",
         "swagger-jsdoc": "^6.1.0",
