--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/express-rate-limit": "^5.1.3",
         "@types/morgan": "^1.9.3",
         "@types/mysql": "^2.15.19",
+        "@types/socket.io": "^3.0.2",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
         "body-parser": "^1.19.0",
@@ -21,6 +22,7 @@
         "express-rate-limit": "^5.3.0",
         "morgan": "^1.10.0",
         "mysql": "^2.18.1",
+        "socket.io": "^4.1.3",
         "swagger-jsdoc": "^6.1.0",
         "swagger-ui-express": "^4.1.6"
     },
