--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "@types/express-rate-limit": "^5.1.3",
+        "@types/jsonwebtoken": "^8.5.4",
         "@types/morgan": "^1.9.3",
         "@types/mysql": "^2.15.19",
         "@types/socket.io": "^3.0.2",
@@ -20,6 +21,7 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-rate-limit": "^5.3.0",
+        "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "mysql": "^2.18.1",
         "socket.io": "^4.1.3",
