--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/jsonwebtoken": "^8.5.4",
         "@types/morgan": "^1.9.3",
         "@types/mysql": "^2.15.19",
+        "@types/sha256": "^0.2.0",
         "@types/socket.io": "^3.0.2",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
@@ -24,6 +25,7 @@
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "mysql": "^2.18.1",
+        "sha256": "^0.2.0",
         "socket.io": "^4.1.3",
         "swagger-jsdoc": "^6.1.0",
         "swagger-ui-express": "^4.1.6"
