--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/ejs": "^3.0.7",
         "@types/express-rate-limit": "^5.1.3",
         "@types/jsonwebtoken": "^8.5.4",
         "@types/morgan": "^1.9.3",
@@ -20,6 +21,7 @@
         "@types/swagger-ui-express": "^4.1.3",
         "body-parser": "^1.19.0",
         "dotenv": "^10.0.0",
+        "ejs": "^3.1.6",
         "express": "^4.17.1",
         "express-rate-limit": "^5.3.0",
         "jsonwebtoken": "^8.5.1",
