--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "dependencies": {
         "@types/ejs": "^3.0.7",
         "@types/express-rate-limit": "^5.1.3",
+        "@types/handlebars": "^4.1.0",
         "@types/jsonwebtoken": "^8.5.4",
         "@types/morgan": "^1.9.3",
         "@types/mysql": "^2.15.19",
+        "@types/nodemailer": "^6.4.4",
+        "@types/nodemailer-express-handlebars": "^4.0.1",
         "@types/sha256": "^0.2.0",
         "@types/socket.io": "^3.0.2",
         "@types/swagger-jsdoc": "^6.0.1",
@@ -24,9 +27,12 @@
         "ejs": "^3.1.6",
         "express": "^4.17.1",
         "express-rate-limit": "^5.3.0",
+        "handlebars": "^4.7.7",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "mysql": "^2.18.1",
+        "nodemailer": "^6.6.3",
+        "nodemailer-express-handlebars": "^4.0.0",
         "sha256": "^0.2.0",
         "socket.io": "^4.1.3",
         "swagger-jsdoc": "^6.1.0",
