--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/cookie-parser": "^1.4.2",
         "@types/ejs": "^3.0.7",
         "@types/express-rate-limit": "^5.1.3",
         "@types/handlebars": "^4.1.0",
@@ -23,6 +24,7 @@
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
         "body-parser": "^1.19.0",
+        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "ejs": "^3.1.6",
