--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@types/cookie-parser": "^1.4.2",
         "@types/ejs": "^3.0.7",
+        "@types/express-fileupload": "^1.2.3",
         "@types/express-rate-limit": "^5.1.3",
         "@types/handlebars": "^4.1.0",
         "@types/jsonwebtoken": "^8.5.4",
@@ -29,13 +30,14 @@
         "dotenv": "^10.0.0",
         "ejs": "^3.1.6",
         "express": "^4.17.1",
+        "express-fileupload": "^1.4.0",
         "express-rate-limit": "^5.3.0",
         "handlebars": "^4.7.7",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "mysql": "^2.18.1",
         "nodemailer": "^6.6.3",
-        "nodemailer-express-handlebars": "^4.0.0",
+        "nodemailer-express-handlebars": "^5.0.0",
         "sha256": "^0.2.0",
         "socket.io": "^4.1.3",
         "swagger-jsdoc": "^6.1.0",
