--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/axios": "^0.14.0",
         "@types/cookie-parser": "^1.4.2",
         "@types/ejs": "^3.0.7",
         "@types/express-fileupload": "^1.2.3",
@@ -24,6 +25,7 @@
         "@types/socket.io": "^3.0.2",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
+        "axios": "^0.27.2",
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
